  or validate() but just bind().
* Refactored ResultSpecification to be an interface. The default implementation is SimpleResultSpecification.
* Removed AbstractAction.setEventFactorySupport(). In the unlikely case that you want to use an custom subclass of
  EventFactorySupport, just override AbstractAction.getEventFactorySupport().
* Renamed FormActionMethods to FormHandlingAction.

Package org.springframework.webflow.builder
* Reapplied 1.0 rc2 fix for inline flow parsing, which was lost in SourceForge CVS issues occurring between 7/5/06 and 15/5/06

Package org.springframework.webflow.execution
* Renamed ConversationService.begin to "beginConversation".
* Removed implicit unlock call in LocalConversationService.removeFlowExecution
* Fixed a bug where ConversationEntry.lock field was serializable--it should be transient.
* Made ConversationServiceException extend NestedRuntimeException, since it is a distinct subsystem root exception.
* Added FlowExecutionRestorationFailureException.
* Added BadlyFormattedFlowExecutionKeyException.
* NoSuchConversationException now triggers a NoSuchFlowExecution exception.
* InvalidContinuationIdException, ContinuationNotFoundException, and ContinuationUnmarshalException 
  now trigger a FlowExecutionRestorationException.

Package org.springframework.webflow.executor
* Refined PortletFlowController to no longer set flowExecutionKey render parameter when an execution terminates.
* Removed the temporary workaround accounting for differences between SWF view names and JSF view ids.  Now 
  by default it is expected that the SWF view name match the JSF view id exactly.  A custom ViewIdMapper can be
  configured to configure a specific mapping strategy.
* Renamed ViewIdResolver to ViewIdMapper.
  
Package org.springframework.webflow.registry
* Made NoSuchFlowDefinitionException a standalone exception of the flow registry subsystem.

Package org.springframework.webflow.samples